<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/gray1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.cyjh.elfin.p200ui.view.customview.TitleView
        android:id="@+id/titleview_setting"
        style="@style/titleview"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center_vertical"
                android:id="@+id/ll_device_name"
                android:background="@drawable/common_item_bg_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/gray2"
                    android:padding="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_16"
                    android:text="@string/device_name"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/gray2"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:id="@+id/tv_device_name"
                    android:background="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_16"
                    android:singleLine="true"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_16"
                    android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>
            <View style="@style/setting_splitline"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:id="@+id/ll_project_number"
                android:background="@drawable/common_item_bg_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/gray2"
                    android:padding="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_16"
                    android:text="@string/bind_enterprise_project"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/gray2"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:id="@+id/tv_project_number"
                    android:background="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_16"
                    android:text="未绑定"
                    android:singleLine="true"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_16"
                    android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>
            <Switch
                android:id="@+id/swtich_setting_volume_key_ctrl"
                android:text="@string/setting_volume_key_ctrl"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/swtich_setting_script_pause_and_resume"
                android:visibility="gone"
                android:text="@string/setting_pause_script"
                style="@style/setting_switch"/>
            <View
                android:visibility="gone"
                style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/swtich_setting_floatview_ctrl"
                android:text="@string/setting_floatview_ctrl"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/swtich_setting_waggle_stop"
                android:text="@string/setting_waggle_stop"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/swtich_setting_call_stop"
                android:text="@string/setting_call_stop"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/swtich_setting_vibration"
                android:text="@string/setting_vibration"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_boot_script"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/setting_swtich_open_run"
                    android:checked="false"
                    android:text="@string/setting_open_run_script"
                    style="@style/setting_switch"/>
                <View style="@style/setting_splitline"/>
            </LinearLayout>
            <Switch
                android:id="@+id/switch_setting_flash_back_auto_restart"
                android:text="@string/flash_back_auto_restart"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/switch_setting_automatically_run_script"
                android:text="@string/automatically_run_script"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/automatically_run_countdown"
                    android:layout_weight="1"
                    style="@style/setting_switch"/>
                <Spinner
                    android:id="@+id/sp_run_script_countdown"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/switch_setting_collect_logcat"
                android:text="@string/log_collection"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <Switch
                android:id="@+id/switch_setting_error_dialog"
                android:text="@string/error_pop_up_window"
                style="@style/setting_switch"/>
            <View style="@style/setting_splitline"/>
            <View
                android:layout_marginTop="20dp"
                style="@style/setting_splitline"/>
            <Button
                android:textSize="16sp"
                android:textColor="@color/gray2"
                android:gravity="center"
                android:id="@+id/btn_setting_scriptlog"
                android:background="@android:color/white"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_scriptlog"
                android:drawableRight="@drawable/ic_arrow_right"/>
            <View style="@style/setting_splitline"/>
            <Button
                android:textSize="16sp"
                android:textColor="@color/gray2"
                android:gravity="center"
                android:id="@+id/setting_button_update"
                android:background="@android:color/white"
                android:paddingLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_update"/>
            <View style="@style/setting_splitline"/>
            <Button
                android:textSize="16sp"
                android:textColor="@color/gray2"
                android:gravity="center"
                android:id="@+id/button_setting_feedback"
                android:background="@android:color/white"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:drawableRight="@drawable/ic_arrow_right"/>
            <Button
                android:textSize="16sp"
                android:textColor="@color/gray2"
                android:gravity="center"
                android:id="@+id/setting_button_exitapp"
                android:background="@android:color/white"
                android:paddingLeft="15dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scriptui_exitapp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
