<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_white_translucent"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidefw_tip_title"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidefw_tip_content"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textColor="@color/gray2"
            android:id="@+id/hidefw_button_cancel"
            android:background="@drawable/scriptui_button_bg_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:minHeight="35dp"
            android:text="@string/hidefw_cancel"
            android:layout_weight="1"/>
        <Button
            android:textColor="@color/blue1"
            android:id="@+id/hidefw_button_ok"
            android:background="@drawable/scriptui_button_bg_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:text="@string/hidefw_ok"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
