<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/distance_10"
    android:layout_marginTop="@dimen/distance_18"
    android:layout_marginRight="@dimen/distance_10">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_40">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/blank7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_number"/>
        <EditText
            android:textSize="12sp"
            android:textColor="@color/blank9"
            android:gravity="center_vertical"
            android:id="@+id/register_number"
            android:background="@null"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_register_number"
            android:singleLine="true">
            <requestFocus/>
        </EditText>
    </LinearLayout>
    <Button
        android:textSize="16sp"
        android:id="@+id/btn_unbind"
        android:background="@drawable/bg_orange_box"
        android:layout_height="@dimen/distance_45"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/distance_10"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="@dimen/distance_16"
        android:text="@string/unbind_register_code"
        style="@style/button"/>
    <Button
        android:textSize="16sp"
        android:id="@+id/btn_sweep_unbind"
        android:background="@drawable/bg_blue_box"
        android:visibility="gone"
        android:layout_height="@dimen/distance_45"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="@dimen/distance_24"
        android:text="@string/sweep_code_unbind"
        style="@style/button"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/blank8"
        android:gravity="center_horizontal"
        android:id="@+id/tv_buckle_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_16"
        android:text="@string/unbind_app_buckle_time"/>
</LinearLayout>
